<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Jithin kozhiyodan on 13/1/21 5:54 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 13/1/21 5:54 PM
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_challenge"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_challenge" />

    <item
        android:id="@+id/navigation_earnings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_earnings" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>