<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Jithin kozhiyodan on 13/1/21 5:54 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 13/1/21 5:54 PM
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hav.havlife.view.fragment.dashboard.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_challenge"
        android:name="com.hav.havlife.view.fragment.dashboard.challenge.ChallengeFragment"
        android:label="@string/title_challenge"
        tools:layout="@layout/fragment_challenge" />

    <fragment
        android:id="@+id/navigation_earnings"
        android:name="com.hav.havlife.view.fragment.dashboard.earnings.EarningsFragment"
        android:label="@string/title_earnings"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.hav.havlife.view.fragment.dashboard.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.hav.havlife.view.fragment.dashboard.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>