<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cstSign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.activity.login.SignInScreen"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarSignUp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/txt_sign_in_container_bottom">

            <TextView
                android:id="@+id/txtSignInHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_head_top"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/txt_sign_in_head"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_sign_in_head_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/txt_sign_in_input_form_start"
                android:layout_marginTop="@dimen/txt_sign_in_head_top"
                android:layout_marginEnd="@dimen/txt_sign_in_input_form_end"
                app:hintEnabled="true"
                app:boxStrokeColor="@color/colorRed10"
                app:errorEnabled="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_check_valid"
                app:endIconTint="@color/colorGreen"
                app:endIconContentDescription="@string/app_name"
                app:errorIconDrawable="@drawable/ic_check_error"

                android:textColorHint="@color/colorGray"
                app:hintTextColor="@color/colorGray"
                app:startIconDrawable="@drawable/ic_mail"
                app:placeholderText="@string/txt_email_hint"
                android:hint="@string/txt_email_hint_2"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSignInHead">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    android:textCursorDrawable="@color/colorRed10"
                    android:background="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_input_form_pwd_top"
                app:hintEnabled="true"
                app:boxStrokeColor="@color/colorRed10"



                android:textColorHint="@color/colorGray"
                app:hintTextColor="@color/colorGray"
                app:startIconDrawable="@drawable/ic_lock"
                app:placeholderText="@string/txt_password_hint"
                android:hint="@string/txt_password_hint_2"

                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:textCursorDrawable="@color/colorRed10"
                    android:background="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_input_form_pwd_top"
                android:text="@string/btn_sign_in_text"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <Button
                android:id="@+id/btnSignInGoogle"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_input_form_pwd_top"
                android:text="@string/btn_sign_in_with_google_text"
                app:backgroundTint="@color/colorRed"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/txt_sign_in_drawable_padding"

                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/txtOr" />

            <Button
                android:id="@+id/btnSignInFacebook"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_input_form_pwd_top"
                android:text="@string/btn_sign_in_with_facebook_text"
                app:backgroundTint="@color/colorBlue"
                app:icon="@drawable/ic_facebook_logo"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/txt_sign_in_drawable_padding"

                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/btnSignInGoogle" />

            <TextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_or_top"
                android:text="@string/txt_sign_in_or"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/txt_sign_in_view_top"
                android:layout_marginEnd="@dimen/txt_sign_in_view_end"
                android:background="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@+id/txtOr"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toTopOf="@+id/txtOr" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/txt_sign_in_view_start"
                android:layout_marginTop="@dimen/txt_sign_in_view_top"
                android:background="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toEndOf="@+id/txtOr"
                app:layout_constraintTop_toTopOf="@+id/txtOr" />

            <TextView
                android:id="@+id/txtNewSignUpHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sign_in_sign_up_head_top"
                android:text="@string/txt_new_sign_up_head"
                android:textColor="@color/colorGray"
                app:layout_constraintBottom_toTopOf="@+id/txtSignUp"
                app:layout_constraintEnd_toEndOf="@+id/txtSignUp"
                app:layout_constraintStart_toStartOf="@+id/txtSignUp"
                app:layout_constraintTop_toBottomOf="@+id/btnSignInFacebook" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="@dimen/txt_sign_up"
                android:text="@string/txt_sign_up_text"
                android:textColor="@color/colorBlue10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/relLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>